--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
   },
   "homepage": "https://github.com/anthonyjgrove/node-simple-starter#readme",
   "dependencies": {
+    "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.14.2",
     "compression": "^1.6.1",
     "express": "^4.13.4",
-    "morgan": "^1.6.1",
-    "babel-preset-stage-1": "^6.1.18",
+    "hogan-express": "^0.5.2",
     "lodash": "^3.10.1",
+    "morgan": "^1.6.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
