--- a/package.json
+++ b/package.json
@@ -38,10 +38,16 @@
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.14.2",
     "compression": "^1.6.1",
+    "connect-mongo": "^1.1.0",
+    "cookie-parser": "^1.4.1",
+    "errorhandler": "^1.4.3",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "hogan-express": "^0.5.2",
     "lodash": "^3.10.1",
+    "mongoose": "4.4.1",
     "morgan": "^1.6.1",
+    "node-sass-middleware": "^0.9.7",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
