--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
+    "express-flash": "0.0.2",
     "express-session": "^1.13.0",
     "hogan-express": "^0.5.2",
     "lodash": "^3.10.1",
+    "method-override": "^2.3.5",
     "mongoose": "4.4.1",
     "morgan": "^1.6.1",
     "node-sass-middleware": "^0.9.7",
