--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongoose": "4.4.1",
     "morgan": "^1.6.1",
     "node-sass-middleware": "^0.9.7",
+    "passport": "^0.3.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
