--- a/package.json
+++ b/package.json
@@ -38,13 +38,10 @@
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.14.2",
     "compression": "^1.6.1",
-    "connect-mongo": "^1.1.0",
-    "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
-    "express-flash": "0.0.2",
-    "express-session": "^1.13.0",
     "hogan-express": "^0.5.2",
+    "jsonwebtoken": "^5.7.0",
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
     "mongoose": "4.4.1",
