--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "morgan": "^1.6.1",
     "node-sass-middleware": "^0.9.7",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-facebook-login": "^2.1.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^3.0.0",
