--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "compression": "^1.6.1",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
+    "fbgraph": "^1.1.0",
+    "googleapis": "^2.1.7",
     "history": "^2.0.0",
     "hogan-express": "^0.5.2",
     "jsonwebtoken": "^5.7.0",
@@ -56,6 +58,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-facebook-login": "^2.1.0",
+    "react-google-login": "^1.x.x",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^3.0.0",
