--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "simple-node-starter",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "description": "Welcome to the simple node starter.",
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server/server.js",
     "dev": "NODE_ENV=development nodemon server/server.js",
     "build:webpack": "webpack --progress --colors",
-    "build:webpack:dev": "webpack --watch --progress --colors",
     "build": "rm -rf node_modules && npm install && npm run build:webpack",
-    "build:dev": "npm install && npm install -g nodemon && npm run build:webpack:dev"
+    "build:dev": "webpack --watch --progress --colors"
   },
   "babel": {
     "presets": [
       "es2015",
-      "react"
+      "react",
+      "stage-0"
     ]
   },
   "repository": {
@@ -29,50 +29,64 @@
     "react"
   ],
   "author": "Anthony Grove",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/anthonyjgrove/node-simple-starter/issues"
   },
   "homepage": "https://github.com/anthonyjgrove/node-simple-starter#readme",
   "dependencies": {
-    "axios": "^0.9.1",
-    "babel-preset-stage-1": "^6.1.18",
+    "axios": "^0.12.0",
     "bcryptjs": "^2.3.0",
-    "body-parser": "^1.14.2",
-    "compression": "^1.6.1",
+    "body-parser": "^1.15.1",
+    "compression": "^1.6.2",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
-    "fbgraph": "^1.1.0",
-    "googleapis": "^2.1.7",
-    "history": "^2.0.0",
+    "fbgraph": "^1.2.0",
+    "googleapis": "^7.1.0",
+    "history": "^3.0.0",
     "hogan-express": "^0.5.2",
-    "jsonwebtoken": "^5.7.0",
-    "jwt-decode": "^1.5.1",
-    "lodash": "^3.10.1",
-    "method-override": "^2.3.5",
-    "mongoose": "4.4.1",
-    "morgan": "^1.6.1",
-    "node-sass-middleware": "^0.9.7",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-facebook-login": "^2.1.0",
-    "react-google-login": "^1.x.x",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.0-rc5",
-    "react-router-redux": "^3.0.0",
-    "redux": "^3.0.4",
-    "redux-form": "^4.2.0",
-    "redux-logger": "^2.5.2",
-    "redux-promise": "^0.5.1",
-    "redux-thunk": "^1.0.3"
+    "jsonwebtoken": "^7.0.0",
+    "jwt-decode": "^2.0.1",
+    "lodash": "^4.13.1",
+    "method-override": "^2.3.6",
+    "mongoose": "4.4.19",
+    "morgan": "^1.7.0",
+    "node-sass-middleware": "^0.9.8",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-facebook-login": "^2.1.5",
+    "react-google-login": "^2.0.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.4",
+    "redux": "^3.5.2",
+    "redux-form": "^5.2.5",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9"
+    "autoprefixer": "^6.3.6",
+    "babel": "^6.5.2",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "jquery": "^2.2.4",
+    "jsdom": "^9.2.1",
+    "mocha": "^2.5.3",
+    "nodemon": "^1.9.2",
+    "react-addons-test-utils": "^15.1.0",
+    "react-fontawesome": "^1.1.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
