--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Welcome to the simple node starter.",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server/server.js",
+    "prod": "NODE_ENV=production node server/server.js",
     "dev": "NODE_ENV=development nodemon server/server.js",
-    "build:webpack": "webpack --progress --colors",
-    "build": "rm -rf node_modules && npm install && npm run build:webpack",
-    "build:dev": "webpack --watch --progress --colors"
+    "build:webpack": "webpack -p --config ./server/config/webpack.prod.config.js",
+    "build": "rm -rf node_modules && rm -rf public && npm install && npm run build:webpack"
   },
   "babel": {
     "presets": [
@@ -45,6 +44,7 @@
     "googleapis": "^7.1.0",
     "history": "^3.0.0",
     "hogan-express": "^0.5.2",
+    "http-proxy": "^1.13.3",
     "jsonwebtoken": "^7.0.0",
     "jwt-decode": "^2.0.1",
     "lodash": "^4.13.1",
@@ -74,19 +74,29 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap": "https://github.com/twbs/bootstrap/tarball/v4-dev",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.2.3",
     "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.19.0",
     "jquery": "^2.2.4",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
+    "node-sass": "^3.7.0",
     "nodemon": "^1.9.2",
     "react-addons-test-utils": "^15.1.0",
     "react-fontawesome": "^1.1.0",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.2.0",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
