(node)(auth) refactor backend authentication

--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
-    "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "fbgraph": "^1.2.0",
     "googleapis": "^7.1.0",
@@ -52,6 +51,9 @@
     "mongoose": "4.4.19",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0",
+    "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-facebook-login": "^2.1.5",
