--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "simple-node-starter",
+  "name": "node-react-redux-starter",
   "version": "0.0.5",
-  "description": "Welcome to the simple node starter.",
+  "description": "Welcome to the Node React Redux Starter.",
   "main": "server.js",
+  "engines": {
+    "npm": ">=3"
+  },
   "scripts": {
     "prod": "NODE_ENV=production node server/server.js",
     "dev": "NODE_ENV=development nodemon server/server.js",
@@ -18,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anthonyjgrove/node-simple-starter.git"
+    "url": "git+https://github.com/anthonyjgrove/node-react-redux-starter.git"
   },
   "keywords": [
     "node",
@@ -32,7 +35,7 @@
   "bugs": {
     "url": "https://github.com/anthonyjgrove/node-simple-starter/issues"
   },
-  "homepage": "https://github.com/anthonyjgrove/node-simple-starter#readme",
+  "homepage": "https://github.com/anthonyjgrove/node-react-redux-starter#readme",
   "dependencies": {
     "axios": "^0.12.0",
     "bcryptjs": "^2.3.0",
@@ -40,6 +43,7 @@
     "compression": "^1.6.2",
     "express": "^4.13.4",
     "fbgraph": "^1.2.0",
+    "glob": "^7.0.3",
     "googleapis": "^7.1.0",
     "history": "^3.0.0",
     "hogan-express": "^0.5.2",
@@ -56,8 +60,9 @@
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-facebook-login": "^2.1.5",
+    "react-facebook-login": "https://github.com/anthonyjgrove/react-facebook-login.git",
     "react-google-login": "^2.0.2",
+    "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
