Add immutable js to reducer

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "history": "^3.0.0",
     "hogan-express": "^0.5.2",
     "http-proxy": "^1.13.3",
+    "immutable": "^3.8.1",
     "jsonwebtoken": "^7.0.0",
     "jwt-decode": "^2.0.1",
     "lodash": "^4.13.1",
@@ -59,6 +60,7 @@
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
+    "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-facebook-login": "https://github.com/anthonyjgrove/react-facebook-login.git",
     "react-google-login": "^2.0.2",
