--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "prod": "NODE_ENV=production node server/server.js",
     "dev": "NODE_ENV=development nodemon server/server.js",
+    "test": "karma start tests/karma.conf.js",
+    "lint": "eslint ./ || true",
     "build:webpack": "webpack -p --config ./server/config/webpack.prod.config.js",
     "build": "rm -rf node_modules && rm -rf public && npm install && npm run build:webpack"
   },
@@ -95,6 +97,13 @@
     "html-webpack-plugin": "^2.19.0",
     "jquery": "^2.2.4",
     "jsdom": "^9.2.1",
+    "karma": "^1.1.0",
+    "karma-jquery-chai": "^0.1.3",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.0.4",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.7.0",
     "nodemon": "^1.9.2",
