--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,10 @@
   "plugins": [
     "react"
   ],
-  "globals": {
+  "rules": {
+    "import/no-unresolved": 0,
+    "global-require": 0,
+    "no-console": 0,
+    "max-len": 0,
   }
 }
