--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "prod": "NODE_ENV=production node server/server.js",
     "dev": "NODE_ENV=development nodemon server/server.js",
-    "test": "karma start tests/karma.conf.js",
+    "test:app": "karma start test/app.karma.conf.js",
+    "test:server": "NODE_ENV=test; mocha `find server -type f -name '*-test.js'`",
     "lint": "eslint ./ || true",
     "build:webpack": "webpack -p --config ./server/config/webpack.prod.config.js",
     "build": "rm -rf node_modules && rm -rf public && npm install && npm run build:webpack"
@@ -39,6 +40,7 @@
   },
   "homepage": "https://github.com/anthonyjgrove/node-react-redux-starter#readme",
   "dependencies": {
+    "asyncawait": "^1.0.4",
     "axios": "^0.12.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.1",
@@ -57,9 +59,6 @@
     "mongoose": "4.4.19",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.0.0",
-    "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.1.0",
@@ -95,8 +94,6 @@
     "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.19.0",
-    "jquery": "^2.2.4",
-    "jsdom": "^9.2.1",
     "karma": "^1.1.0",
     "karma-jquery-chai": "^0.1.3",
     "karma-mocha": "^1.1.1",
@@ -107,13 +104,14 @@
     "mocha": "^2.5.3",
     "node-sass": "^3.7.0",
     "nodemon": "^1.9.2",
+    "phantomjs-polyfill": "0.0.2",
     "react-addons-test-utils": "^15.1.0",
     "react-fontawesome": "^1.1.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
+    "should": "^9.0.2",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
   }
 }
